tried to do dynamic allocation of thread stack

--- a/prj.conf
+++ b/prj.conf
@@ -5,8 +5,12 @@ CONFIG_OUTPUT_DISASSEMBLE_ALL=y
 CONFIG_APPLICATION_DEFINED_SYSCALL=y
 CONFIG_USERSPACE=y
 
+CONFIG_DYNAMIC_OBJECTS=y
+
 CONFIG_LOG=y
 CONFIG_FAULT_DUMP=2
+CONFIG_MPU_LOG_LEVEL_DBG=y
+CONFIG_ASSERT=y
 
 # Console configuration
 CONFIG_CONSOLE=y
