--- a/prj.conf
+++ b/prj.conf
@@ -4,7 +4,7 @@ CONFIG_OUTPUT_DISASSEMBLE_ALL=y
 # Enable application syscalls
 CONFIG_APPLICATION_DEFINED_SYSCALL=y
 CONFIG_USERSPACE=y
-CONFIG_HW_STACK_PROTECTION=y
+#CONFIG_HW_STACK_PROTECTION=y
 
 CONFIG_LOG=y
 CONFIG_FAULT_DUMP=2
